--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "deployment-react-router-page",
+  "name": "deploy-demo",
+  "homepage": "https://rlagaming007.github.io/deploy-demo/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,7 +12,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
